# esp-agrinet-zigbee-glm5.2

./: CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
components/agrinet_common/: CMakeLists.txt  README.md  idf_component.yml
components/agrinet_common/include/: agrinet_clusters.h  agrinet_log.h  agrinet_mqtt_schema.h  agrinet_types.h
components/agrinet_common/src/: agrinet_clusters.c
docs/: BUILD.md  FLASHING.md  MQTT_API.md
esp-agrinet-zigbee-glm5.2/: .clang-format  .gitignore  CHANGELOG.md
esp-agrinet-zigbee-glm5.2/.github/workflows/: build.yml
esp-agrinet-zigbee-glm5.2/docs/: ARCHITECTURE.md  BUILD.md  FLASHING.md  HARDWARE.md  ZIGBEE_DATA_MODEL.md
esp-agrinet-zigbee-glm5.2/gateway/: CMakeLists.txt  sdkconfig.defaults
esp-agrinet-zigbee-glm5.2/gateway/main/: CMakeLists.txt  app_gateway.h  app_mqtt.c  app_mqtt.h  app_wifi.c  idf_component.yml
esp-agrinet-zigbee-glm5.2/nodes/actuator_node/: CMakeLists.txt
esp-agrinet-zigbee-glm5.2/nodes/sensor_node/: CMakeLists.txt  sdkconfig.defaults
esp-agrinet-zigbee-glm5.2/rcp/: README.md  sdkconfig.defaults
esp-agrinet-zigbee-glm5.2/scripts/: build_all.sh  flash.py
gateway/host/: CMakeLists.txt  sdkconfig.defaults
gateway/host/main/: CMakeLists.txt  app_gateway.c  app_gateway.h  app_wifi.h  idf_component.yml
gateway/main/: app_gateway.c  main.c
gateway/rcp/: README.md  sdkconfig.defaults
nodes/actuator_node/: partitions.csv  sdkconfig.defaults
nodes/sensor_node/: sdkconfig.defaults
rcp/: README.md  sdkconfig.defaults
scripts/: build_all.sh  flash.py
(+21 files in other folders)
