idf_component_register(
    SRCS
        "main.c"
        "app_gateway.c"
        "app_wifi.c"
        "app_mqtt.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        agrinet_common
        espressif__esp-zigbee-lib
        espressif__esp-zboss-lib
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        mqtt
)
